.provarCaches/00D5f000005vwGkEAI/objects/rstk__solrel__c.object
<CustomObject>
    <description>solrel__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the sum of the Inventory and NIC costs. (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_invcost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of the inventory component costs for this release (see SOORDDMDCST). (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Order Line Releases</relationshipLabel>
        <relationshipName>solrels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_niccost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of the NIC costs associated with this release (see SOLINENIC_COST). (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_qtyissue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The portion of the SOLINE_QTYORDER that was issued on this release. (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Issued</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_qtypackage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity of this release that has been ‘packed’ – or assigned to a shipper line (see SOSHIPLINE_QTYPACKAGE). (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Packaged</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_rel2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_rel2</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_rel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Release</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstohdfrng</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstohdlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstohdmach</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstohdmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstsublab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solrel_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>solrel_ucstsubmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Order Line Release</label>
    <listViews>
        <fullName>rstk__RS_Order_Line_Releases</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__solrel_cost__c</columns>
        <columns>rstk__solrel_invcost__c</columns>
        <columns>rstk__solrel_line__c</columns>
        <columns>rstk__solrel_rel__c</columns>
        <columns>rstk__solrel_qtypackage__c</columns>
        <columns>rstk__solrel_niccost__c</columns>
        <columns>rstk__solrel_qtyissue__c</columns>
        <columns>rstk__solrel_ucstmtl__c</columns>
        <columns>rstk__solrel_ucstohdmtl__c</columns>
        <columns>rstk__solrel_ucstlab__c</columns>
        <columns>rstk__solrel_ucstohdfrng__c</columns>
        <columns>rstk__solrel_ucstohdlab__c</columns>
        <columns>rstk__solrel_ucstohdmach__c</columns>
        <filterScope>Everything</filterScope>
        <label>Order Line Releases</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Line Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>